Changed authenticating, from comparing token to obtaining token from username and password. Token is valid for 12 hours with revokable function
